fixed blog container overflowing

--- a/styles.css
+++ b/styles.css
@@ -313,7 +313,7 @@ body {
 
 /* blog   */
 .blog-container {
-    max-width: 1140px;
+    max-width: 950px;
     margin: auto;
     background: white;
     padding: 20px;
